Tue Jul 28 17:19:54 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c  - Allowed 'Space' key to start a new game
        * index.html - Changed instructions for space key change

1998-07-24  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* gnobots.desktop: Added Portuguese translation.
	
	* .cvsignore: New file. Added `Makefile.in'.
	
Thu Jul 16 19:16:20 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c - Fixed 'S' key

Fri Jul  3 18:35:10 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c  - Fixed timeout_cb function to return TRUE
        * gnobots.c  - Allowed player to choose random teleports
        * index.html - Changed instructions for random teleports

Wed Jul  1 20:53:47 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c - Fixed problem with  non-TrueColor visuals